<?xml version="1.0"?>
<package>
    <name>ORB_SLAM2</name>
    <version>1.0.0</version>
    <description>The ORB_SLAM2 package</description>

    <author>Raul Mur-Artal</author>
    <license>GPLv3</license>
    <maintainer email="raulmur@unizar.es">Raul Mur-Artal</maintainer>

    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>cmake_modules</build_depend>
    +
    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>message_filters</run_depend>
    <run_depend>cv_bridge</run_depend>
</package>